Fixing NuGet issues

--- a/src/Cogworks.Meganav/Cogworks.Meganav.csproj
+++ b/src/Cogworks.Meganav/Cogworks.Meganav.csproj
@@ -39,6 +39,7 @@
     <Compile Include="Web\Controllers\API\MeganavApiController.cs" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="Cogworks.Meganav.nuspec" />
     <None Include="compilerconfig.json" />
     <None Include="compilerconfig.json.defaults">
       <DependentUpon>compilerconfig.json</DependentUpon>
