--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "Cogworks.Meganav",
+  "version": "1.0.1",
   "url": "https://github.com/thecogworks/meganav",
   "license": {
     "name": "MIT",
