--- a/src/Cogworks.Meganav/Cogworks.Meganav.csproj
+++ b/src/Cogworks.Meganav/Cogworks.Meganav.csproj
@@ -31,6 +31,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="Constants.cs" />
+    <Compile Include="Converters\DictionaryConverter.cs" />
     <Compile Include="Enums\MeganavItem.cs" />
     <Compile Include="Models\MeganavItem.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -284,7 +285,10 @@
     <None Include="Web\UI\App_Plugins\Meganav\Js\meganavSettings.controller.js" />
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="Web\UI\Views\" />
+    <None Include="Web\UI\App_Plugins\Meganav\Views\prevalues.html" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Web\UI\App_Plugins\Meganav\Js\meganavPrevalue.controller.js" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\packages\AutoMapper.3.3.1\tools\AutoMapper.targets" Condition="Exists('..\packages\AutoMapper.3.3.1\tools\AutoMapper.targets')" />
