--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "author": {
     "name": "Cogworks",
-    "url": "http://www.thecogworks.com/"
+    "url": "https://thecogworks.com/"
   },
   "readme": "A flexible, draggable link picker for constructing site navigation menus, big or small, in Umbraco 7.",
   "devDependencies": {
