--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "Cogworks.Meganav",
-  "version": "1.1.1b",
+  "version": "1.1.1-beta",
   "url": "https://github.com/thecogworks/meganav",
   "license": {
     "name": "MIT",
