--- a/src/Cogworks.Meganav/Cogworks.Meganav.csproj
+++ b/src/Cogworks.Meganav/Cogworks.Meganav.csproj
@@ -31,6 +31,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="Constants.cs" />
+    <Compile Include="Converters\ChildConverter.cs" />
     <Compile Include="Converters\DictionaryConverter.cs" />
     <Compile Include="Enums\MeganavItem.cs" />
     <Compile Include="Helpers\PreValueHelper.cs" />
