--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "Cogworks.Meganav",
-  "version": "1.1.2",
+  "version": "1.5.0",
   "url": "https://github.com/thecogworks/meganav",
   "license": {
     "name": "MIT",
@@ -10,7 +10,7 @@
     "name": "Cogworks",
     "url": "https://thecogworks.com/"
   },
-  "readme": "A flexible, draggable link picker for constructing site navigation menus, big or small, in Umbraco 7.",
+  "readme": "A flexible, draggable link picker for constructing site navigation menus, big or small, in Umbraco 7.6+.",
   "devDependencies": {
     "grunt": "~0.4.5",
     "grunt-contrib-copy": "~0.4.1",
