--- a/src/Our.Umbraco.Meganav/Our.Umbraco.Meganav.csproj
+++ b/src/Our.Umbraco.Meganav/Our.Umbraco.Meganav.csproj
@@ -1,6 +1,6 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <TargetFrameworks>net5.0;net6.0;net7.0</TargetFrameworks>
+    <TargetFrameworks>net7.0</TargetFrameworks>
     <Version Condition="'$(BUILD_BUILDNUMBER)' == ''">1.0.0.0</Version>
     <Version Condition="'$(BUILD_BUILDNUMBER)' != ''">$(BUILD_BUILDNUMBER)</Version>
     <Description>A flexible, draggable link picker for constructing site navigation menus in Umbraco</Description>
@@ -29,6 +29,6 @@
     <PackageReference Include="Umbraco.Cms.Infrastructure" Version="[10.0.0,11.0.0)" />
   </ItemGroup>
   <ItemGroup Condition="'$(TargetFramework)' == 'net7.0'">
-    <PackageReference Include="Umbraco.Cms.Infrastructure" Version="[11.0.0,13.0.0)" />
+    <PackageReference Include="Umbraco.Cms.Infrastructure" Version="12.3.6" />
   </ItemGroup>
 </Project>
