--- a/src/Our.Umbraco.Meganav/Our.Umbraco.Meganav.csproj
+++ b/src/Our.Umbraco.Meganav/Our.Umbraco.Meganav.csproj
@@ -14,6 +14,7 @@
     <RepositoryType>Git</RepositoryType>
     <PackageTags>umbraco meganav navigation menu umbraco-marketplace</PackageTags>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+    <Version>1.0.1.0</Version>
   </PropertyGroup>
   <ItemGroup>
     <Content Include="Web\UI\**\*.*" Pack="true" PackagePath="content" />
