--- a/src/Our.Umbraco.Meganav/Our.Umbraco.Meganav.csproj
+++ b/src/Our.Umbraco.Meganav/Our.Umbraco.Meganav.csproj
@@ -1,11 +1,11 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <TargetFrameworks>net5.0;net6.0;net7.0</TargetFrameworks>
+    <TargetFrameworks>net7.0;net8.0</TargetFrameworks>
     <Version Condition="'$(BUILD_BUILDNUMBER)' == ''">1.0.0.0</Version>
     <Version Condition="'$(BUILD_BUILDNUMBER)' != ''">$(BUILD_BUILDNUMBER)</Version>
     <Description>A flexible, draggable link picker for constructing site navigation menus in Umbraco</Description>
     <Authors>Callum Whyte</Authors>
-    <Copyright>Copyright © 2023 Callum Whyte, and other contributors</Copyright>
+    <Copyright>Copyright © 2024 Callum Whyte, and other contributors</Copyright>
     <PackageIcon>docs\logo.png</PackageIcon>
     <PackageLicenseFile>docs\LICENSE.md</PackageLicenseFile>
     <PackageReadmeFile>docs\README.md</PackageReadmeFile>
@@ -22,13 +22,10 @@
     <None Include="..\..\README.md" Pack="true" PackagePath="docs" />
     <None Include="..\..\docs\img\logo.png" Pack="true" PackagePath="docs" />
   </ItemGroup>
-  <ItemGroup Condition="'$(TargetFramework)' == 'net5.0'">
-    <PackageReference Include="Umbraco.Cms.Infrastructure" Version="[9.0.0,10.0.0)" />
-  </ItemGroup>
-  <ItemGroup Condition="'$(TargetFramework)' == 'net6.0'">
-    <PackageReference Include="Umbraco.Cms.Infrastructure" Version="[10.0.0,11.0.0)" />
-  </ItemGroup>
-  <ItemGroup Condition="'$(TargetFramework)' == 'net7.0'">
-    <PackageReference Include="Umbraco.Cms.Infrastructure" Version="[11.0.0,13.0.0)" />
-  </ItemGroup>
+    <ItemGroup Condition="'$(TargetFramework)' == 'net7.0'">
+      <PackageReference Include="Umbraco.Cms.Infrastructure" Version="[12.3.6,13.0.0)" />
+	</ItemGroup>
+    <ItemGroup Condition="'$(TargetFramework)' == 'net8.0'">
+	  <PackageReference Include="Umbraco.Cms.Infrastructure" Version="[13.0.0,14.0.0)" />
+    </ItemGroup>
 </Project>
